--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -17,7 +17,55 @@
           <form action="{% url 'add_cart' single_product.id %}" method="post">
             {% csrf_token %}
             <article class="content-body">
+  
               <h2 class="title">{{single_product.product_name}}</h2>
+              <div class="rating-start">
+            <span>
+              {% if single_product.averageReview < 0.5 %}
+              <i class="bi bi-star" aria-hiddlen="true"></i>
+              {% elif single_product.averageReview >= 0.5 and single_product.averageReview < 1 %}
+              <i class="bi bi-star-half" aria-hiddlen="true"></i>
+              {% elif single_product.averageReview >= 1 %}
+              <i class="bi bi-star-fill" aria-hiddlen="true"></i>
+              {% endif %}
+
+              {% if single_product.averageReview < 1.5 %}
+              <i class="bi bi-star" aria-hiddlen="true"></i>
+              {% elif single_product.averageReview >= 1.5 and single_product.averageReview < 2 %}
+              <i class="bi bi-star-half" aria-hiddlen="true"></i>
+              {% elif single_product.averageReview >= 2 %}
+              <i class="bi bi-star-fill" aria-hiddlen="true"></i>
+              {% endif %}
+              
+              
+              {% if single_product.averageReview < 2.5 %}
+              <i class="bi bi-star" aria-hiddlen="true"></i>
+              {% elif single_product.averageReview >= 2.5 and single_product.averageReview < 3 %}
+              <i class="bi bi-star-half" aria-hiddlen="true"></i>
+              {% elif single_product.averageReview >= 3 %}
+              <i class="bi bi-star-fill" aria-hiddlen="true"></i>
+              {% endif %}
+
+
+              {% if single_product.averageReview < 3.5 %}
+              <i class="bi bi-star" aria-hiddlen="true"></i>
+              {% elif single_product.averageReview >= 3.5 and single_product.averageReview < 4 %}
+              <i class="bi bi-star-half" aria-hiddlen="true"></i>
+              {% elif single_product.averageReview >= 4 %}
+              <i class="bi bi-star-fill" aria-hiddlen="true"></i>
+              {% endif %}
+
+              {% if single_product.averageReview < 4.5 %}
+              <i class="bi bi-star" aria-hiddlen="true"></i>
+              {% elif single_product.averageReview >= 4.5 and single_product.averageReview < 5 %}
+              <i class="bi bi-star-half" aria-hiddlen="true"></i>
+              {% elif single_product.averageReview >= 5 %}
+              <i class="bi bi-star-fill" aria-hiddlen="true"></i>
+              {% endif %}
+              
+            </span>
+          </div>
+          <span>{{single_product.countReview}} Comentarios</span>
 
               <div class="mb-3">
                 <var class="price h4">${{single_product.price}}</var>
@@ -80,13 +128,12 @@
 
     <div class="row">
       <div class="col-md-9">
-        <header class="section-heading">
-          <h3>Calificación de clientes</h3>
-        </header>
+        
 
         <form action="{% url 'submit_review' single_product.id %}" method="post">
           {% csrf_token %}
           <h5>Escribe tu cometario</h5>
+          
           <div>
             <label for="">Como calificarias este producto</label>
             <br>
@@ -132,6 +179,55 @@
           </div>
           {% include 'includes/alerts.html' %}
         </form>
+        <header class="section-heading">
+          <h3>Calificación de clientes</h3>
+          <div class="rating-start">
+            <span>
+              {% if single_product.averageReview < 0.5 %}
+              <i class="bi bi-star" aria-hiddlen="true"></i>
+              {% elif single_product.averageReview >= 0.5 and single_product.averageReview < 1 %}
+              <i class="bi bi-star-half" aria-hiddlen="true"></i>
+              {% elif single_product.averageReview >= 1 %}
+              <i class="bi bi-star-fill" aria-hiddlen="true"></i>
+              {% endif %}
+
+              {% if single_product.averageReview < 1.5 %}
+              <i class="bi bi-star" aria-hiddlen="true"></i>
+              {% elif single_product.averageReview >= 1.5 and single_product.averageReview < 2 %}
+              <i class="bi bi-star-half" aria-hiddlen="true"></i>
+              {% elif single_product.averageReview >= 2 %}
+              <i class="bi bi-star-fill" aria-hiddlen="true"></i>
+              {% endif %}
+              
+              
+              {% if single_product.averageReview < 2.5 %}
+              <i class="bi bi-star" aria-hiddlen="true"></i>
+              {% elif single_product.averageReview >= 2.5 and single_product.averageReview < 3 %}
+              <i class="bi bi-star-half" aria-hiddlen="true"></i>
+              {% elif single_product.averageReview >= 3 %}
+              <i class="bi bi-star-fill" aria-hiddlen="true"></i>
+              {% endif %}
+
+
+              {% if single_product.averageReview < 3.5 %}
+              <i class="bi bi-star" aria-hiddlen="true"></i>
+              {% elif single_product.averageReview >= 3.5 and single_product.averageReview < 4 %}
+              <i class="bi bi-star-half" aria-hiddlen="true"></i>
+              {% elif single_product.averageReview >= 4 %}
+              <i class="bi bi-star-fill" aria-hiddlen="true"></i>
+              {% endif %}
+
+              {% if single_product.averageReview < 4.5 %}
+              <i class="bi bi-star" aria-hiddlen="true"></i>
+              {% elif single_product.averageReview >= 4.5 and single_product.averageReview < 5 %}
+              <i class="bi bi-star-half" aria-hiddlen="true"></i>
+              {% elif single_product.averageReview >= 5 %}
+              <i class="bi bi-star-fill" aria-hiddlen="true"></i>
+              {% endif %}
+              
+            </span>
+          </div>
+        </header>
       {% for review in reviews %}
         <article class="box mb-3 mt-3">
           <div class="icontext w-100">
